# Cortex-CLI

./: README.md  classification_data.csv  clustering_data.csv  data.csv  pyproject.toml  setup.py
cortex/: main.py
cortex/algorithms/: base.py  registry.py
cortex/algorithms/deep_learning/: simple_ann.py
cortex/algorithms/reinforcement_learning/: q_learning.py
cortex/algorithms/supervised/: classification.py  ensemble.py  gbm.py  lightgbm.py  lightgbm_regressor.py  regression.py  text_models.py  xgboost.py  xgboost_regressor.py
cortex/algorithms/unsupervised/: clustering.py
cortex/data_handlers/: base.py  detector.py  environment.py  tabular.py  text.py
cortex/nlp/: dynamic_parser.py  parser.py
cortex/pipeline/: main.py
cortex/tuning/: main.py
cortex_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_algorithms.py
