[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-cli"
version = "0.1.0"
description = "A powerful CLI for machine learning."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "spacy",
    "fuzzywuzzy",
    "python-Levenshtein",
    "scikit-learn",
    "torch",
    "pyfiglet",
    "colorama",
    "gymnasium",
    "xgboost",
    "lightgbm",
    "sentence-transformers",
]

[project.scripts]
cortex = "cortex.main:main"

[tool.hatch.build.targets.wheel]
packages = ["cortex"]